--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <!--===================== SKILLS =====================-->
 
       <!-- skills start -->
-      <section class="skills container">
+      <section class="skills container" id="skills">
         <h3 class="section__title">SKILLS</h3>
         <span class="section__subtitle">technologies i’ve  been working with recently</span>
         <div class="skills__container container grid">
